# the-studio

./: .gitignore  ARCHITECTURE.md  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: run_sprint1.py  sprint-1-results.md
benchmark/output/baseline/todo-cli/: pyproject.toml
benchmark/output/baseline/todo-cli/tests/: test_todo.py
benchmark/output/baseline/todo-cli/todo/: cli.py  manager.py  models.py  storage.py
benchmark/output/studio/todo-cli/: pyproject.toml
benchmark/output/studio/todo-cli/designs/: v1.json  v2.json  v3.json  v8.json
benchmark/output/studio/todo-cli/src/todo_cli/: cli.py  config.py  models.py  repository.py  service.py
benchmark/output/studio/todo-cli/tests/: test_e2e.py
cli/: __init__.py  main.py
observability/: loki.yml  prometheus.yml  promtail.yml
observability/grafana/dashboards/: design-health.json  session-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
prompts/build_agent/: friction_detection.md  metadata.json  skeleton.md  system.md
prompts/design_agent/: friction_revision.md  initial_design.md  metadata.json  system.md
sandbox/: Dockerfile  entrypoint.sh
studio/: __init__.py  config.py  main.py
studio/agents/: build.py  design.py
studio/ai/: __init__.py  budget.py  determinism.py  llm_client.py  prompt_loader.py
studio/api/: __init__.py  middleware.py  schemas.py  websocket.py
studio/api/routes/: health.py
studio/benchmark/: __init__.py  harness.py
studio/db/: __init__.py  models.py  projection.py  session.py
studio/db/migrations/: env.py
studio/db/migrations/versions/: 001_initial.py
studio/design/: __init__.py  revision.py  schema.py
studio/events/: __init__.py  emitter.py  replay.py  schemas.py
studio/friction/: __init__.py  contract.py  detector.py
studio/graph/: builder.py  edges.py  state.py
studio/graph/nodes/: complete.py  design_agent.py  init_session.py  skeleton_build.py  skeleton_verify.py
studio/observability/: __init__.py  logging.py  metrics.py  tracing.py
studio/verification/: checks.py  runner.py  sandbox.py
studio/worker/: __init__.py  arq_worker.py
tests/: conftest.py
tests/contracts/: test_design_agent_contract.py  test_event_schema.py
tests/integration/: test_graph_builder.py
tests/unit/: test_cli.py  test_config.py  test_design_schema.py  test_events.py  test_friction_contract.py  test_graph_edges.py  test_health.py  test_llm_client.py  test_logging.py  test_models.py  test_prompt_loader.py  test_worker.py
